--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -18,30 +18,27 @@
       <div class="form-row">
         <!-- type-->
         <div class="form-group col-md-2">
+         
           <label for="type">tipo</label>
-
           <select name="type" id="type" formControlName="type" class="form-control">
             <option *ngFor="let type of typeOptions" [value]="type.value">{{type.text}}</option>
           </select>
-
-          <div class="text-danger" *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
-            <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
-          </div>
+          <app-form-field-error [form-control]="resourceForm.get('type')"></app-form-field-error>
+        
         </div>
 
         <!-- name -->
         <div class="form-group col-md-5">
+
           <label for="name">Lançamento</label>
           <input type="text" class="form-control" id="name" formControlName="name">
-
-          <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
-            <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
-            <div *ngIf="resourceForm.get('name').errors.minlength">deve ter no mínimo 2 caracteres</div>
-          </div>
+          <app-form-field-error [form-control]="resourceForm.get('name')"></app-form-field-error>
+          
         </div>
 
         <!-- Amount -->
         <div class="form-group col-md-3">
+          
           <label for="amount">Valor</label>
           <div class="input-group">
             <div class="input-group-prepend">
@@ -50,22 +47,19 @@
             <input [imask]="imaskConfig" type="text" class="form-control text-right" id="amount"
               formControlName="amount">
           </div>
-          <div class="text-danger" *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
-            <div *ngIf="resourceForm.get('amount').errors.required">dado obrigatório</div>
-          </div>
+          <app-form-field-error [form-control]="resourceForm.get('amount')"></app-form-field-error>
+        
         </div>
 
         <!-- date -->
         <div class="form-group col-md-2">
+          
           <label for="amount">Data</label>
-
           <p-calendar id="date" formControlName="date" inputStyleClass="formaControl" dataType="string"
             dateFormat="dd/mm/yy" [locale]="ptBR" [showButtonBar]=true>
           </p-calendar>
+          <app-form-field-error [form-control]="resourceForm.get('date')"></app-form-field-error>
 
-          <div class="text-danger" *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
-            <div *ngIf="resourceForm.get('date').errors.required">dado obrigatório</div>
-          </div>
         </div>
 
       </div>
@@ -80,9 +74,7 @@
             <label (click)="resourceForm.get('paid').setValue(false)"
               [class.active]="resourceForm.get('paid').value == false" class="btn btn-outline-info">Pendente</label>
           </div>
-          <div class="text-danger" *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
-            <div *ngIf="resourceForm.get('paid').errors.required">dado obrigatório</div>
-          </div>
+          <app-form-field-error [form-control]="resourceForm.get('paid')"></app-form-field-error>
         </div>
 
         <!-- CategoryId -->
@@ -91,10 +83,7 @@
           <select name="categoryId" id="categoryId" formControlName="categoryId" class="form-control">
             <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
           </select>
-          <div class="text-danger"
-            *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
-            <div *ngIf="resourceForm.get('categoryId').errors.required">dado obrigatório</div>
-          </div>
+          <app-form-field-error [form-control]="resourceForm.get('categoryId')"></app-form-field-error>
         </div>
 
         <!-- description -->
